--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==3.6.2
 asttokens==2.1.0
 backcall==0.2.0
 contourpy==1.0.6
@@ -6,7 +7,9 @@ debugpy==1.6.3
 decorator==5.1.1
 entrypoints==0.4
 executing==1.2.0
+fastapi==0.86.0
 fonttools==4.38.0
+idna==3.4
 ipykernel==6.17.0
 ipython==8.6.0
 jedi==0.18.1
@@ -27,6 +30,7 @@ prompt-toolkit==3.0.32
 psutil==5.9.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pydantic==1.10.2
 Pygments==2.13.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
@@ -34,7 +38,10 @@ pytz==2022.6
 PyYAML==6.0
 pyzmq==24.0.1
 six==1.16.0
+sniffio==1.3.0
 stack-data==0.6.0
+starlette==0.20.4
 tornado==6.2
 traitlets==5.5.0
+typing_extensions==4.4.0
 wcwidth==0.2.5
